--- a/index.css
+++ b/index.css
@@ -58,7 +58,7 @@ nav ul li a {
 }
 
 .hero {
-    background: url('images/photoIllusatrion.avif') no-repeat center center;
+    background: url('images/IMG_0998.jpeg') no-repeat center center;
     height: 70vh;
     display: flex;
     flex-direction: column;
